# MPC-ModelPredictiveControl

./: 00-LPGdebutanizerUnitStepCalc.py  01-LPGdebutanizerSimTest.py  02-LPGdebutanizerOnline.py  02-LPGdesbutanizerOnline.py  LPGdebutanizerUnitStepCalc.py  LPGdesbutanizerStepTest.csv  LPGdesbutanizerUnitStepCalc.ipynb  README.md  environment.yml  pyproject.toml  requirements.txt  simulation.py  testSimulation.py  testSystems.py
_old/: mpc_ex1_errado.ipynb
old/: mpc_old.py  simulation_old.py
outputs/: Gstep.joblib
src/: StepCalc.py  mpc.py
