[project]
name = "mpc"
version = "0.1.0"
description = "Model Predictive Control experiments"
requires-python = "==3.11.*"

dependencies = [
  "numpy>=1.26",
  "scipy>=1.12",
  "pandas>=2.2",
  "matplotlib>=3.8",
  "control>=0.10",
  "joblib>=1.2",
  "numexpr>=2.8",
  "packaging",
]

[tool.uv]
dev-dependencies = [
  "ipykernel",
  "jupyter",
]
